fix: fixed alignment

--- a/src/App.css
+++ b/src/App.css
@@ -1,9 +1,9 @@
 #root {
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
-  text-align: center;
+  background-color: #FFC020;
+  display: inline;
+  margin: 0 0 0 0;
 }
+
 /*
 .logo {
   height: 6em;
@@ -17,29 +17,30 @@
 .logo.react:hover {
   filter: drop-shadow(0 0 2em #61dafbaa);
 }
-*/
+
 @keyframes logo-spin {
   from {
     transform: rotate(0deg);
   }
+
   to {
     transform: rotate(360deg);
   }
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  a:nth-of-type(2) .logo {
-    animation: logo-spin infinite 20s linear;
-  }
-}
-
-.card {
-  padding: 2em;
-}
 
 .read-the-docs {
   color: #888;
 }
+*/
 
-
-/*Align .logo to right*/
+/*Align .logo to right bottom*/
+.logo {
+  position: absolute;
+  width: 546.14px;
+  height: 525.14px;
+  right: 0;
+  bottom: 0;
+  gap: 0px;
+  /* It still has a gap between the logo and the right bottom corner */
+}
